k8s/manifests/good/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-weather-app
  namespace: test
spec:
  selector:
    app: flask-weather-app
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
